# la16

./: CMakeLists.txt
include/la16/: core.h
include/la16/instruction/: execution.h
src/: core.c  main.c
src/instruction/: execution.c  mpp.c
